--- a/style.css
+++ b/style.css
@@ -37,3 +37,11 @@ html, body {
   margin-top: 10px;
 }
 
+.dropdown-toggle {
+  padding-right: 0;
+  margin-left: 100px;
+}
+
+.filter {
+  margin-left: 30px;
+}
